--- a/client/src/pages/dummy/index.less
+++ b/client/src/pages/dummy/index.less
@@ -13,6 +13,7 @@ swiper {
     image {
         width: 100%;
         height: 100%;
+        border-radius: 16px;
     }
 }
 
@@ -40,7 +41,8 @@ swiper {
             flex-direction: column;
             justify-content: space-between;
             .title {
-                font-size: 28px;
+                font-size: 30px;
+                word-break: break-all;
                 color: rgba(13, 14, 16, 1);
             }
             .time {
