create import wallet cloud functions

--- a/client/src/pages/index/import_wallet.less
+++ b/client/src/pages/index/import_wallet.less
@@ -38,6 +38,8 @@ page {
         border-radius: 8px;
         margin-bottom: 40px;
         box-sizing: border-box;
+        font-size: 28px;
+        color: rgba(46, 47, 71, 1);
         background-color: rgba(156, 158, 185, 0.1);
     }
     .textarea_placeholder {
@@ -48,6 +50,8 @@ page {
         padding: 30px 32px;
         border-radius: 8px;
         margin-bottom: 40px;
+        font-size: 28px;
+        color: rgba(46, 47, 71, 1);
         background-color: rgba(156, 158, 185, 0.1);
     }
     .input_placeholder {
